# CHAIRMAN

./: .gitignore  CLEANUP_SUMMARY.md  LICENSE  README.md  STATUS.md  app.py  barber.db  build.py  chairman.spec  chairman_macos.spec  config.py  pyproject.toml  requirements.txt  style.qss
.claude/: settings.local.json
.github/workflows/: build-release.yml
assets/icons/: app_icon.icns  generate_icons.py
assets/sounds/: generate_sounds.py
core/: app_state.py  auth.py  clients.py  email_service.py  logging_config.py  scheduler.py  services.py  sounds.py  updater.py  validators.py
data/: .device_token  db.py  models.py
installer/windows/: chairman_setup.iss
ui/: auth_window.py  components.py  dialogs.py  flyout.py  login_window.py  main_window.py  sidebar.py  splash_screen.py  statusbar.py  titlebar.py
ui/pages/: client_page.py  dashboard_page.py  finance_page.py  products_page.py  schedule_page.py  services_page.py  settings_page.py
